# simple-cache

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt  postman.api_tests.json
src/cache/: ICache.h  LRUCache.cpp  LRUCache.h
src/controller/: CacheController.cpp  CacheController.h  CacheController.hpp  CacheProxy.h
src/dto/: AddEntryDto.h  RetrieveEntryDto.h
src/server/: App.cpp  AppComponent.h  AppComponent.hpp
test/: CacheControllerTest.cpp  CacheControllerTest.h  MyControllerTest.cpp  tests.cpp
test/app/: CacheApiTestClient.h
